helpers: add nb to refine roicat output
currently very experimental

--- a/notebooks/inspect-muse.ipynb
+++ b/notebooks/inspect-muse.ipynb
@@ -9,16 +9,16 @@
     "\n",
     "This is currently being tested to inspect the output of processed `roicat` outputs.\n",
     "\n",
-    "This currently uses `tk` and cannot run on Oscar headless."
+    "This currently uses `tk` and cannot run on Oscar headless.\n",
+    "\n",
+    "Note: this is now superseded by `refine-muse.ipynb`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "020f3892-fe74-493e-81c3-eb99e5a10adc",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -370,7 +370,7 @@
     "    # plot contours\n",
     "    for session, ax in enumerate(ax_list):\n",
     "        if session not in select_contours:\n",
-    "            ax.set_title(f'session #{i+1} [NOT FOUND]')\n",
+    "            ax.set_title(f'session #{session+1} [NOT FOUND]')\n",
     "            continue\n",
     "        \n",
     "        session_contours = select_contours[session]['contour']\n",
@@ -381,7 +381,7 @@
     "            for ch in c_handles:\n",
     "                ch.tag = tag\n",
     "        \n",
-    "        ax.set_title(f'session #{i+1} [id={select_session_roi} | ID={select_global_roi}]')\n",
+    "        ax.set_title(f'session #{session+1} [id={select_session_roi} | ID={select_global_roi}]')\n",
     "        \n",
     "    plt.show()\n",
     "    \n",
